5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1723_2504.log
== TEST (2019-05-11 11:55:29) 
-- CODE:
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = int(input("percentual de crescimento do virus:"))
pl = int(input("insira o percentual de crescimento de virus:"))
dia = 0
cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(qv < 2*ql):
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:56:28) 
-- CODE:
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = int(input("percentual de crescimento do virus:"))
pl = int(input("insira o percentual de crescimento de virus:"))
dia = 0
cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv < ql):
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:57:12) 
-- CODE:
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = int(input("percentual de crescimento do virus:"))
pl = int(input("insira o percentual de crescimento de virus:"))
dia = 0
cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv < ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:57:57) 
-- CODE:
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de virus:"))
dia = 0
cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv < ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:58:34) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de virus:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv < ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:58:55) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de virus:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:19) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:48) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:50) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:50) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:50) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:50) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:50) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:50) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:51) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:51) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:51) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:51) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:51) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:52) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:52) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:53) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:59:53) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:00:05) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:01:34) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
v= cv + v
l = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	v = cv + v
	l = cl + l
	dia = dia + 1
print(dia)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    while(2 *qv > ql):
NameError: name 'qv' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:02:00) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
v= cv + v
l = cl + l

while(2 * v > l):
	cv = (v * pv)/100
	cl = (l * pl)/100
	v = cv + v
	l = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:04:21) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
v= cv + v
l = cl + l

while(l != 2*v):
	cv = (v * pv)/100
	cl = (l * pl)/100
	v = cv + v
	l = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
35163
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:05:25) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
v= cv + v
l = cl + l

while(l != 2*v):
	cv = (v * pv)/100
	cl = (l * pl)/100
	v = cv + v
	l = cl + l
	dia = dia + 1
if(l == 2*v)
print(dia)

	

-- ERROR:
File "XXXX", line 18
    if(l == 2*v)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:05:32) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
v= cv + v
l = cl + l

while(l != 2*v):
	cv = (v * pv)/100
	cl = (l * pl)/100
	v = cv + v
	l = cl + l
	dia = dia + 1
if(l == 2*v):
print(dia)

	

-- ERROR:
File "XXXX", line 19
    print(dia)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:05:38) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
v= cv + v
l = cl + l

while(l != 2*v):
	cv = (v * pv)/100
	cl = (l * pl)/100
	v = cv + v
	l = cl + l
	dia = dia + 1
if(l == 2*v):
	print(dia)

	

-- OUTPUT:
35163
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:06:58) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
v = cv + v
l = cl + l

while(l < 2*v):
	cv = (v * pv)/100
	cl = (l * pl)/100
	v = cv + v
	l = cl + l
	dia = dia + 1
if(l == 2*v):
	print(dia)

	

-- OUTPUT:
35163
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:07:31) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
v = cv + v
l = cl + l

while(l < 2*v):
	cv = (v * pv)/100
	cl = (l * pl)/100
	v = cv + v
	l = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:09:20) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

while(2*v > l):
	cv = (v * pv)/100
	cl = (l * pl)/100
	v = cv + v
	l = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 12:09:52) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

while(2*v > l):
	cv = (v * pv)/100
	cl = (l * pl)/100
	v = cv + v
	l = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
1.89107
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:11:15) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:37) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
5529.06
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:37) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
8437.05
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:37) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
5228.25
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:37) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
5538.9
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:37) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
5948.61
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:37) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
7786.19
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:37) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
7853.61
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:37) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
8352.28
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:37) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
5594.13
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:38) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
4.42293
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
insira a quantidade inicial de virus:insira a quantidade inicial de leucocitos:percentual de crescimento do virus:insira o percentual de crescimento de leucocitos:9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:

-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:38) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
8036.03
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:38) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
8145.67
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:38) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
8015.43
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:38) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
4.40344
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
insira a quantidade inicial de virus:insira a quantidade inicial de leucocitos:percentual de crescimento do virus:insira o percentual de crescimento de leucocitos:35164
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:

-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:38) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
8060.84
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:38) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
8369.25
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:38) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
8900.79
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:38) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
8223.3
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:38) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
8767.46
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:38) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

while(2*v > l):
	cv = (v * pv)/100
	cl = (l * pl)/100
	v = cv + v
	l = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
7.92264
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:

-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:38) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
8761.81
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:38) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
6067.5
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:44:38) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
7847.28
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:45:47) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:47:33) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))


while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
0.921101
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2504/main.py", line 8, in <module>
    while(2 *qv > ql):
NameError: name 'qv' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:49:41) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
246.58
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:

-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:49:41) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
237.25
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:

-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:

-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:49:41) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))

cv = (v * pv)/100
cl = (l * pl)/100
qv = cv + v
ql = cl + l

while(2 *qv > ql):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
236.654
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:

-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:

-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:50:58) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))


while(ql< 2*qv):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
0.185369
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2504/main.py", line 8, in <module>
    while(ql< 2*qv):
NameError: name 'ql' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:50:59) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))


while(ql< 2*qv):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ql< 2*qv):
NameError: name 'ql' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:51:52) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))


while(l < 2*v):
	cv = (v * pv)/100
	cl = (l * pl)/100
	qv = cv + v
	ql = cl + l
	dia = dia + 1
print(dia)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(ql< 2*qv):
NameError: name 'ql' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:52:28) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))


while(l < 2*v):
	cv = (v * pv)/100
	cl = (l * pl)/100
	v = cv + v
	l = cl + l
	dia = dia + 1
print(dia)

	

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:52:41) 
-- CODE:
dia = 0
v = int(input("insira a quantidade inicial de virus:"))
l = int(input("insira a quantidade inicial de leucocitos:"))
pv = float(input("percentual de crescimento do virus:"))
pl = float(input("insira o percentual de crescimento de leucocitos:"))


while(l < 2*v):
	cv = (v * pv)/100
	cl = (l * pl)/100
	v = cv + v
	l = cl + l
	dia = dia + 1
print(dia)

	

-- EXECUTION TIME:
0.227427
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
